--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -2,6 +2,8 @@
 $enable-gradients: true;
 $enable-shadows: true;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 // Customize some defaults
 $body-color: #333;
 $body-bg: #fff;
@@ -48,17 +50,80 @@ $success: #7952b3;
 // @import "bootstrap/scss/print";
 
 
-//
+
 // Custom styles
-//
 
 @import "icon-list";
 
 body {
-  padding: 3rem 1.5rem;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
+  color: #616971;
+}
+
+.top-bar {
+  align-items: center;
+  background: #7aaec4;
+  display:flex;
+  height: 40px;;
+  padding:4px 0;
+}
+
+.top-bar a {
+  color:white;
+  text-decoration:none;
+  font-size:18px;
 }
 
 // Style Bootstrap icons
 .bi {
   fill: currentcolor;
 }
+
+
+.fixed-background {
+  overflow: hidden; /*-- Correction for iOS --*/
+}
+
+@media (max-width: 1199.98px) {
+
+}
+/* Devices under 768px (md) */
+@media (max-width: 767.98px) {
+
+}
+
+.row, .container-fluid {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+
+.fixed-background {
+  position: relative;
+  width: 100%;
+  z-index: 1000!important;
+}
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999 !important;
+}
+.fixed {
+  z-index: -999!important;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  will-change: transform;
+}
+
