--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -61,9 +61,19 @@ body {
   color: #616971;
 }
 
+.carousel-item {
+  background-size:cover;
+  height: 70vh;
+}
+
+.carousel-control-prev img,
+.carousel-control-next img {
+  height: 15%;
+}
+
 .navbar-brand img {
   height: 68px;
-}
+} 
 
 .navbar {
   font-size: 18px;
@@ -78,17 +88,19 @@ body {
 }
 
 .nav-link {
-  color:#5b5555;
+  color:#5b5555 !important;
   text-decoration: none;
 }
 
 .nav-link.active,
 .nav-link:hover {
-  color:#4981b3; 
+  color:#4981b3 !important; 
   text-decoration: none;
 }
 
-
+.navbar-toggler:hover {
+  box-shadow: 2px 2px 2px 2px #7aaec4;
+}
 .top-bar {
   align-items: center;
   background: #7aaec4;
@@ -109,9 +121,9 @@ body {
 }
 
 
-.fixed-background {
-  overflow: hidden; /*-- Correction for iOS --*/
-}
+// .fixed-background {
+//   overflow: hidden; /*-- Correction for iOS --*/
+// }
 
 @media (max-width: 1199.98px) {
 
@@ -121,37 +133,36 @@ body {
 
 }
 
-.row, .container-fluid {
-  margin-left: 0px !important;
-  margin-right: 0px !important;
-}
+// .row, .container-fluid {
+//   margin-left: 0px !important;
+//   margin-right: 0px !important;
+// }
 
 
-.fixed-background {
-  position: relative;
-  width: 100%;
-  z-index: 1000!important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -999 !important;
-}
-.fixed {
-  z-index: -999!important;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  will-change: transform;
-}
-
+// .fixed-background {
+//   position: relative;
+//   width: 100%;
+//   z-index: 1000!important;
+// }
+// .fixed-wrap {
+//   clip: rect(0, auto, auto, 0);
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: -999 !important;
+// }
+// .fixed {
+//   z-index: -999!important;
+//   display: block;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-size: cover;
+//   background-position: center center;
+//   -webkit-transform: translateZ(0);
+//   transform: translateZ(0);
+//   will-change: transform;
+// }
