--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -61,10 +61,72 @@ body {
   color: #616971;
 }
 
-.carousel-item {
-  background-size:cover;
-  height: 70vh;
+.bg-custom {
+  background-color: rgba(0,0,0, .4);
+  color:white;
+  border-radius: 8px;
 }
+
+#border-primary {
+  border-top: 2px solid #4981b3 !important;
+}
+
+.btn-danger {
+  background-color: #AC2615;
+  border:1px solid #AC2615;
+}
+
+.btn-lg {
+  border-radius:0;
+  border-width: medium;
+  font-size:16px;
+  text-transform:uppercase;
+}
+
+.btn-primary {
+  background-color: #68a0d2;
+  border:0.5px solid #68a0d2;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  background-color: #4981b3 !important;
+  border:0.5x solid #4981b3 !important;
+}
+
+#carousel {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-caption {
+position:absolute;
+top:50%;
+transform:translateY(-50%);
+text-transform: uppercase;
+}
+
+.carousel-caption h1 {
+font-size:50px !important;
+text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
+}
+
+.carousel-caption h3 {
+  font-size:36px !important;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+  text-transform:none;
+  }
+
+.carousel-inner {
+  background-size:cover;
+  max-height: 80vh;
+}
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  transition:transform 1.2s ease;
+}
+
 
 .carousel-control-prev img,
 .carousel-control-next img {
@@ -79,7 +141,7 @@ body {
   font-size: 18px;
   font-weight: 700;
   letter-spacing: 1.5px;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
   z-index:1;
 }
 
