--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -72,7 +72,6 @@ body {
 }
 
 .btn-danger {
-  background-color: #AC2615;
   border:1px solid #AC2615;
 }
 
@@ -84,14 +83,13 @@ body {
 }
 
 .btn-primary {
-  background-color: #68a0d2;
   border:0.5px solid #68a0d2;
 }
 
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #4981b3 !important;
-  border:0.5x solid #4981b3 !important;
+  background-color: #4981b3;
+  border:0.5x solid #4981b3;
 }
 
 #carousel {
@@ -110,7 +108,7 @@ font-size:50px !important;
 text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
 }
 
-.carousel-caption h3 {
+.carousel-caption h2 {
   font-size:36px !important;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
   text-transform:none;
