--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -128,8 +128,22 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
 
 .carousel-control-prev img,
 .carousel-control-next img {
-  height: 15%;
+  height: 10%;
 }
+
+.fixed {
+  
+  position:fixed;
+}
+// .fixed-wrap {
+//   background-image: url(../assets/img/active.jpg);
+//   margin:10px;
+// }
+.fixed-background {
+  background: linear-gradient(to right, #386641, #b23a48);
+  padding:10rem 0;
+}
+
 
 .navbar-brand img {
   height: 68px;
@@ -181,9 +195,9 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
 }
 
 
-// .fixed-background {
-//   overflow: hidden; /*-- Correction for iOS --*/
-// }
+.fixed-background {
+  overflow: hidden; /*-- Correction for iOS --*/
+}
 
 @media (max-width: 1199.98px) {
 
@@ -193,36 +207,36 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
 
 }
 
-// .row, .container-fluid {
-//   margin-left: 0px !important;
-//   margin-right: 0px !important;
-// }
+.row, .container-fluid {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
 
 
-// .fixed-background {
-//   position: relative;
-//   width: 100%;
-//   z-index: 1000!important;
-// }
-// .fixed-wrap {
-//   clip: rect(0, auto, auto, 0);
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   z-index: -999 !important;
-// }
-// .fixed {
-//   z-index: -999!important;
-//   display: block;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-size: cover;
-//   background-position: center center;
-//   -webkit-transform: translateZ(0);
-//   transform: translateZ(0);
-//   will-change: transform;
-// }
+.fixed-background {
+  position: relative;
+  width: 100%;
+  z-index: 1000!important;
+}
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999 !important;
+}
+.fixed {
+  z-index: -999!important;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  will-change: transform;
+}
