--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,6 +66,7 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
   max-height: 80vh;
 }
 
+
 .carousel-item-next,
 .carousel-item-prev,
 .carousel-item.active {
@@ -91,6 +92,9 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);;
   padding:10rem 0;
 }
 
+.jumbotron {
+  background:#ced4da;
+}
 
 .navbar-brand img {
   height: 68px;
